InternexDev_Sandbox/src/objects/Interest_Calculation_Status__c.object
<CustomObject>
    <fields>
        <fullName>Business_Transaction_Date__c</fullName>
        <label>Business Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Account</label>
        <referenceTo>Client_Account__c</referenceTo>
        <relationshipLabel>Interest Calculation Status</relationshipLabel>
        <relationshipName>Interest_Calculation_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Interest Calculation Status</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ICS-{0000000}</displayFormat>
        <label>Interest Calculation Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest Calculation Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>